--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     restart: unless-stopped
     volumes:
       - db_data:/var/lib/postgresql/data
-    ports:
-      - "127.0.0.1:5432:5432"
+    expose:
+      - 5432
     environment:
       POSTGRES_USER: postgres_user
       POSTGRES_PASSWORD: postgres_password
@@ -29,7 +29,7 @@ services:
     restart: always
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres_user:postgres_password@db:5432/aptindexer
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres_user:postgres_password@db:5432/hasura
+      # HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres_user:postgres_password@db:5432/hasura
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey2
       HASURA_GRAPHQL_DEV_MODE: "false"
