--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,8 @@ services:
       - 8080:8080
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
+      # HASURA_GRAPHQL_DATABASE_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
+      PG_DATABASE_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
       HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres_user:postgres_password@dbhasura:5432/hasura
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey2
