--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,12 @@ services:
     restart: always
     environment:
       # HASURA_GRAPHQL_DATABASE_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
-      PG_DATABASE_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
+      # PG_DATABASE_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
       HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres_user:postgres_password@dbhasura:5432/hasura
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey2
       HASURA_GRAPHQL_DEV_MODE: "false"
+      INDEXER_V2_POSTGRES_URL: postgres://postgres_user:postgres_password@dbindexer:5432/aptindexer
     networks:
       - docknode-apt-indexer
 
